# himalayan-bank-revamp

./: docker-compose.yml
app/: pubspec.yaml
app/lib/: main.dart
app/lib/core/domain/entities/: response_data_entity.dart
app/lib/core/presentation/screens/: splash_screen.dart
app/lib/core/utils/: constants.dart
app/lib/features/account/data/repositories/: account_repository.dart
app/lib/features/account/domain/entities/: account_entity.dart
app/lib/features/account/presentation/widgets/: account_balance.dart  account_info.dart
app/lib/features/authentication/data/repositories/: authentication_repository.dart
app/lib/features/authentication/domian/entities/: token_response_entity.dart
bank_api/: Dockerfile  app.py  pyproject.toml
bank_api/src/: __init__.py  config.py
bank_api/src/core/: account.py  authenticate_user.py  current_user.py  db.py  send_money.py  user.py
bank_api/src/models/: __init__.py  account.py  log.py  user.py
bank_api/src/routes/: __init__.py  check_account.py  check_transfer.py  get_balance.py  get_transactions.py  login.py  my_account.py  register.py  transfer.py
bank_api/src/schemas/: __init__.py  account_request_schema.py  account_response_schema.py  balance_response_schema.py  check_account_response_schema.py  check_transfer_request_schema.py  register_request_schema.py  register_response_schema.py  transaction_response_schema.py  transaction_schema.py  transfer_request_schema.py
bank_api/src/utils/: __init__.py  create_access_token.py  get_password_hash.py
(+20 files in other folders)
